--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "main": "/src/server.js",
   "scripts": {
     "dev": "nodemon src/server.js",
-    "start": "nodemon src/server.js",
+    "start": "node src/server.js",
     "studio": " npx prisma studio",
     "start:db": "docker compose up",
     "generate": "npx prisma generate",
-    "migrate": "npx prisma migrate dev"
+    "migrate": "npx prisma migrate dev",
+    "build": "npx prisma generate"
   },
   "prisma": {
     "schema": "src/prisma/schema.prisma"
