--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "full_stack-todo_app",
   "version": "1.0.0",
   "type": "module",
-  "main": "src/server.js",
+  "main": "/src/server.js",
   "scripts": {
     "dev": "nodemon src/server.js",
-    "start": "node src/server.js",
+    "start": "nodemon src/server.js",
     "studio": " npx prisma studio",
     "start:db": "docker compose up",
     "generate": "npx prisma generate",
